# OCSF-Simulator

./: CLAUDE.md  MANIFEST.in  README.md  main.py  pyproject.toml
src/ocsf_simulator/: __init__.py  __main__.py  geonames.py  json_schema_faker.py  simulator.py
